-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4, 6.5
-
97f348f6b (dev)
If we explicitly want to pass a QVariant to a function, we should not actually pass its data() and metaType(). It doesn't matter here because the engine does its conversion magic, but generally this is wrong.
For Gerrit Dashboard: QTBUG-109005 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
446004,2 | QmlCompiler: Pass QVariant as-is to functions accepting var | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |