QmlCompiler: Pass QVariant as-is to functions accepting var

The QML engine will helpfully re-assemble our variant if we pass it in
pieces, but we should not rely on this.

Fixes: QTBUG-109005
Change-Id: I35d10b4ee61a0426049986bc6f83d6c880ddc281
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>